// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpDownSimpleNumericInput component renders correctly 1`] = `
<div>
  <div
    class="UpDownSimpleNumericInput-root-1 locked-xs"
  >
    <button
      aria-label="Down"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-13 iconButton IconButton-medium-19 IconButton-contained-14 button-sides"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13H5v-2h14v2z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <div
      class="MuiFormControl-root MuiTextField-root RawTextField-root-22 input in-middle"
    >
      <div
        class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input MuiFilledInput-input"
          type="text"
          value="0"
        />
      </div>
    </div>
    <button
      aria-label="Up"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-13 iconButton IconButton-medium-19 IconButton-contained-14 button"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`UpDownSimpleNumericInput component renders variant with buttons on the side 1`] = `
<div>
  <div
    class="UpDownSimpleNumericInput-root-26 locked-xs"
  >
    <div
      class="MuiFormControl-root MuiTextField-root RawTextField-root-27 input"
    >
      <div
        class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input MuiFilledInput-input"
          type="text"
          value="0"
        />
      </div>
    </div>
    <button
      aria-label="Down"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-42 iconButton IconButton-medium-48 IconButton-contained-43 button-right"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13H5v-2h14v2z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <button
      aria-label="Up"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-42 iconButton IconButton-medium-48 IconButton-contained-43 button"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`UpDownSimpleNumericInput component renders variant with step set to a pre-defined value 1`] = `
<div>
  <div
    class="UpDownSimpleNumericInput-root-51 locked-xs"
  >
    <button
      aria-label="Down"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-63 iconButton IconButton-medium-69 IconButton-contained-64 button-sides"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13H5v-2h14v2z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <div
      class="MuiFormControl-root MuiTextField-root RawTextField-root-72 input in-middle"
    >
      <div
        class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-formControl"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input MuiFilledInput-input"
          type="text"
          value="0"
        />
      </div>
    </div>
    <button
      aria-label="Up"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-63 iconButton IconButton-medium-69 IconButton-contained-64 button"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
